- Changed location of github link. - Added README.md for GitHub.

--- a/Code/options.html
+++ b/Code/options.html
@@ -105,7 +105,7 @@
             <div class="footer">
                 <div class="created">
                     Created by Rui J of <a href="http://roowii.net" target="_blank">roowii.net</a>.<br />
-                    Source code at <a href="https://github.com/jookyboi" target="_blank">github.com/jookyboi</a>.
+                    Source code at <a href="https://github.com/jookyboi/happycamper" target="_blank">github.com/jookyboi</a>.
                 </div>
                 <div class="social">
                     <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgoogle.com&amp;layout=button_count&amp;show_faces=false&amp;width=80&amp;action=like&amp;font&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe>
