- Finished options.html for deploy. - Added HappyCamper.zip as packed Chrome extension. - Added screenshot assets along with PSDs.

--- a/Code/options.html
+++ b/Code/options.html
@@ -108,7 +108,7 @@
                     Source code at <a href="https://github.com/jookyboi/happycamper" target="_blank">github.com/jookyboi</a>.
                 </div>
                 <div class="social">
-                    <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgoogle.com&amp;layout=button_count&amp;show_faces=false&amp;width=80&amp;action=like&amp;font&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe>
+                    <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fextensions%2Fdetail%2Fcoimkphjagggmdkinhgjanjkekcjmpoe&amp;layout=button_count&amp;show_faces=false&amp;width=80&amp;action=like&amp;font&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe>
 
                 </div>
                 <div class="clear"></div>
